@@ -61,15 +61,14 @@
     </distributionManagement>
 
     <properties>
+        <!-- common properties -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <base.java.version>1.8</base.java.version>
-        <arguments>-Dmulti_release=true</arguments>
+        <java.version>1.8</java.version>
 
+        <!-- plugin versions -->
         <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
         <maven.checkstyle.plugin.version>3.0.0</maven.checkstyle.plugin.version>
-        <checkstyle.version>8.14</checkstyle.version>
-        <jacoco.maven.plugin.version>0.8.2</jacoco.maven.plugin.version>
         <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
         <maven.failsafe.plugin.version>2.22.0</maven.failsafe.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
@@ -79,83 +78,36 @@
         <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
         <nexus.staging.maven.plugin.version>1.6.8</nexus.staging.maven.plugin.version>
         <swagger.maven.plugin.version>2.0.5</swagger.maven.plugin.version>
-        <versions.maven.plugin>2.5</versions.maven.plugin>
-        <maven.toolchain.plugin>1.1</maven.toolchain.plugin>
-        <maven.jar.plugin>3.1.0</maven.jar.plugin>
+        <versions.maven.plugin.version>2.5</versions.maven.plugin.version>
+        <maven.jar.plugin.version>3.1.0</maven.jar.plugin.version>
+        <buildnumber.maven.plugin.version>1.3</buildnumber.maven.plugin.version>
+        <maven.bundle.plugin.version>3.3.0</maven.bundle.plugin.version>
 
+        <!-- plugins dependencies -->
+        <asm.version>7.0</asm.version>
+        <checkstyle.version>8.14</checkstyle.version>
+
+        <!-- dependency version -->
         <javax.ws.rs.api.version>2.1.1</javax.ws.rs.api.version>
         <javax.json.bind.api.version>1.0</javax.json.bind.api.version>
         <swagger.version>2.0.5</swagger.version>
-        <jaxb.api.version>2.4.0-b180830.0359</jaxb.api.version>
-        <asm.version>7.0</asm.version>
         <jackson.annotations.version>2.9.7</jackson.annotations.version>
+
+        <!-- compatibility -->
         <javax.activation.version>1.2.0</javax.activation.version>
+        <jaxb.api.version>2.4.0-b180830.0359</jaxb.api.version>
     </properties>
 
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-toolchains-plugin</artifactId>
-                    <version>${maven.toolchain.plugin}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>toolchain</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <toolchains>
-                            <jdk>
-                                <version>${base.java.version}</version>
-                            </jdk>
-                        </toolchains>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
-                    <version>${versions.maven.plugin}</version>
+                    <version>${versions.maven.plugin.version}</version>
                     <configuration>
                         <generateBackupPoms>false</generateBackupPoms>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven.compiler.plugin.version}</version>
-                    <configuration>
-                        <source>${base.java.version}</source>
-                        <target>${base.java.version}</target>
-                    </configuration>
-                    <executions>
-                        <!-- for Java 11 -->
-                        <execution>
-                            <id>java11</id>
-                            <goals>
-                                <goal>compile</goal>
-                            </goals>
-                            <configuration>
-                                <release>11</release>
-                                <jdkToolchain>
-                                    <version>11</version>
-                                </jdkToolchain>
-                                <compileSourceRoots>
-                                    <compileSourceRoot>${project.basedir}/src/main/java-mr/11</compileSourceRoot>
-                                </compileSourceRoots>
-                                <multiReleaseOutput>true</multiReleaseOutput>
-                            </configuration>
-                        </execution>
-                    </executions>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.ow2.asm</groupId>
-                            <artifactId>asm</artifactId>
-                            <version>${asm.version}</version>
-                        </dependency>
-                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -203,7 +155,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>${maven.jar.plugin}</version>
+                    <version>${maven.jar.plugin.version}</version>
                     <configuration>
                         <archive>
                             <manifest>
@@ -241,14 +193,48 @@
                     </dependencies>
                 </plugin>
                 <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>${jacoco.maven.plugin.version}</version>
+                    <!-- This plugin generates the buildNumber property used in maven-bundle-plugin -->
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>${buildnumber.maven.plugin.version}</version>
+                    <configuration>
+                        <format>{0,date,MM/dd/yyyy hh:mm aa}</format>
+                        <items>
+                            <item>timestamp</item>
+                        </items>
+                    </configuration>
                     <executions>
                         <execution>
-                            <id>prepare-agent</id>
+                            <phase>validate</phase>
                             <goals>
-                                <goal>prepare-agent</goal>
+                                <goal>create</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>${maven.bundle.plugin.version}</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <instructions>
+                            <_failok>true</_failok>
+                            <Build-Id>${buildNumber}</Build-Id>
+                            <Bundle-Description>Matrix Java API</Bundle-Description>
+                            <Bundle-Version>${project.version}</Bundle-Version>
+                            <Bundle-SymbolicName>${project.name}</Bundle-SymbolicName>
+                            <DynamicImport-Package>*</DynamicImport-Package>
+                            <Specification-Vendor>ma1uta</Specification-Vendor>
+                            <_nodefaultversion>false</_nodefaultversion>
+                        </instructions>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>osgi-bundle</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>bundle</goal>
                             </goals>
                         </execution>
                     </executions>
@@ -258,9 +244,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
                     <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
+                        <argLine>--add-modules java.xml.bind --illegal-access=permit</argLine>
                     </configuration>
                     <dependencies>
                         <dependency>
@@ -283,9 +267,7 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
+                        <argLine>--illegal-access=permit</argLine>
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
@@ -350,8 +332,12 @@
         </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-toolchains-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -359,7 +345,15 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -418,91 +412,86 @@
             </build>
         </profile>
 
-        <!-- enable java11 compilation -->
         <profile>
-            <id>compile-java11</id>
+            <id>jdk9+</id>
             <activation>
-                <jdk>[11,)</jdk>
+                <jdk>[9,)</jdk>
             </activation>
+            <properties>
+                <packaging.type>jar</packaging.type>
+            </properties>
             <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>java11</id>
-                                <phase>compile</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>${maven.compiler.plugin.version}</version>
+                            <executions>
+                                <execution>
+                                    <id>default-compile</id>
+                                    <configuration>
+                                        <!-- compile everything to ensure module-info contains right entries -->
+                                        <release>9</release>
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>base-compile</id>
+                                    <goals>
+                                        <goal>compile</goal>
+                                    </goals>
+                                    <!-- recompile everything for target VM except the module-info.java -->
+                                    <configuration>
+                                        <excludes>
+                                            <exclude>module-info.java</exclude>
+                                        </excludes>
+                                        <source>${java.version}</source>
+                                        <target>${java.version}</target>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <source>${java.version}</source>
+                                <target>${java.version}</target>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <argLine>--add-modules java.xml.bind</argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
+
         </profile>
 
         <profile>
-            <id>test-toolchains-bypass</id>
+            <id>jdk8-</id>
             <activation>
-                <property>
-                    <name>!multi_release</name>
-                </property>
+                <jdk>(,9)</jdk>
             </activation>
-
+            <properties>
+                <packaging.type>bundle</packaging.type>
+            </properties>
             <build>
-                <plugins>
-                    <!-- Run the unit tests with the JVM used to run maven -->
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <jvm>${env.JAVA_HOME}/bin/java</jvm>
-                            <!-- this shows that the Java 11 code isn't tested -->
-                            <testFailureIgnore>true</testFailureIgnore>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>multi-jar</id>
-            <activation>
-                <property>
-                    <name>multi_release</name>
-                </property>
-            </activation>
-
-            <build>
-                <plugins>
-                    <!-- enable java11 compilations -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>java11</id>
-                                <phase>compile</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <!-- add the multi-release:true manifest entry -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <version>${maven.jar.plugin}</version>
-                        <configuration>
-                            <archive>
-                                <manifestEntries>
-                                    <Multi-Release>true</Multi-Release>
-                                </manifestEntries>
-                            </archive>
-                            <excludes>
-                                <exclude>**/javac*</exclude>
-                                <exclude>**/org.codehaus.plexus.compiler.javac.JavacCompiler*arguments</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>${maven.compiler.plugin.version}</version>
+                            <configuration>
+                                <source>${java.version}</source>
+                                <target>${java.version}</target>
+                                <excludes>
+                                    <exclude>module-info.java</exclude>
+                                </excludes>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
     </profiles>
